--- a/src/static_in_project/static_root/css/custom_summernote_widget.css
+++ b/src/static_in_project/static_root/css/custom_summernote_widget.css
@@ -10,7 +10,10 @@
 */
 
 .note-editor.note-frame {
-  border-radius: 0px;
+    border-radius: 0px;
+    border-left-style: none;
+    border-top-style: none;
+    border-right-style: none;
 }
 
 .panel {
