--- a/src/templates/navbar-fixed.html
+++ b/src/templates/navbar-fixed.html
@@ -52,6 +52,13 @@
                 <li class="navbar-packed-listitem">
                     <a title="Announcements" href="{% url 'announcements:list' %}"><i class="fa fa-newspaper-o fa-fw"></i></a>
                 </li>
+                    {% if request.user.is_staff %}
+                    <li class="navbar-packed-listitem">
+                        <a title="Quest Approvals" href="{% url 'quests:approvals' %}">
+                            <i class="fa fa-shield fa-fw fa-shield fa-rotate-180"></i>
+                        </a>
+                    </li>
+                    {% endif %}
                 {% else %}
                 <li>
                     <a title="Public Portfolios" href="{% url 'portfolios:public_list' %}">
@@ -93,7 +100,7 @@
                     </ul>
                 </li>
                 {% else %}
-                <li id="menu-xp">
+                <li id="menu-xp" class="hidden-xs">
                     <a href="{% url 'courses:marks' request.user.id %}"
                        class="navbar-text-large-container">XP:
                         <span class="navbar-text-large"> {{ request.user.profile.xp_cached }}</span>
