--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -85,7 +85,7 @@
     <div class="nav list-group hidden-xs sidebar-menu" id="lg-menu-staff">
       <a class="list-group-item {% if '/approvals/' in request.path_info %}active{% endif %}"
          href="{% url 'quests:approvals' %}">
-        <i class="fa fa-shield fa-fw"></i>&nbsp;
+        <i class="fa fa-shield fa-fw fa-rotate-180"></i>&nbsp;
         <span class="visible-sm-inline visible-xs-inline visible-md-inline">Approvals</span>
         <span class="hidden-sm hidden-xs hidden-md">Quest Approvals</span>
         <span id="approvals_badge" class="badge alert-danger list-group-item-badge "></span>
