typo template tag

--- a/src/templates/navbar-fixed.html
+++ b/src/templates/navbar-fixed.html
@@ -36,7 +36,7 @@
                 --><span class="badge alert-danger notification-badge"></span><!--
             --></button>
 
-                {% if not request.user.is_staff %} %}
+                {% if not request.user.is_staff %}
                     <!-- mobile XP -->
                 <ul class="nav navbar-nav navbar-mobile-xp visible-xs-block">
                     <li>
