--- a/src/quest_manager/templates/quest_manager/buttons.html
+++ b/src/quest_manager/templates/quest_manager/buttons.html
@@ -1,62 +1,61 @@
 {% load quest_tags %}
 
 <div id='preview-btns-{{ q.id }}' class="pull-right">
-  {% if  request.user.is_staff or request.user == q.editor %}
     {% if not no_details %} <!-- no_details if you are already viewing the details =) -->
-    <a class="btn btn-info" href="{% url 'quests:quest_detail' q.id %}" role="button"
-      title = "View quest details" >
-      <i class="fa fa-eye"></i>
-    </a>
-    {% endif %}
-    <a class="btn btn-warning" href="{% url 'quests:quest_update' q.id %}" role="button"
-      title = "Edit the quest" >
-      <i class="fa fa-edit"></i>
-    </a>
-    <a class="btn btn-primary" href="{% url 'quests:quest_copy' q.id %}" role="button"
-      title = "Create a copy of this quest" >
-      <i class="fa fa-copy"></i>
-    </a>
-    <a class="btn btn-default" href="{% url 'quests:approved_for_quest' q.id %}" role="button"
-      title = "View past submissions of this quest" >
-      <i class="fa fa-folder-open-o"></i>
-    </a>
-    <a class="btn btn-danger" href="{% url 'quests:quest_delete' q.id %}" role="button"
-      title = "Delete this quest" >
-      <i class="fa fa-trash-o"></i>
-    </a>
-
-  {% else %}
-
-    {% if not no_details %} <!-- no_details if you are already viewing the details =) -->
-      <a title="View the content of this quest without starting it"
-         class="btn btn-info" href="{% url 'quests:quest_detail' q.id %}" role="button">View Details</a>
-    {% endif %}
-    <a title="View the content of this quest and move it to 'In Progress', allowing you to complete it"
-       class="btn btn-primary" href="{% url 'quests:start' q.id %}" role="button">Start Quest</a>
-
-    {% if request.user.profile.game_lab_transfer_process_on %}
-      <a title="Mark this quest as completed, but you won't get XP for it"
-         class="btn btn-warning" href="{% url 'quests:skip_for_quest' q.id %}" role="button">Skip Quest</a>
-    {% endif %}
-
-    {% if q|is_hidden:request.user %}
-      <a title="Remove this from your list of hidden quests"
-         class="btn btn-success" role="button" href="{% url 'quests:unhide' q.id %}" >
-        <i class="fa fa-eye"></i>
-      </a>
-    {% elif q.hideable %}
-      <a title="Add this to your list of hidden quests"
-         class="btn btn-default" role="button" href="{% url 'quests:hide' q.id %}" >
-        <i class="fa fa-eye-slash"></i>
+      <a title="View Details: preview the content of this quest without starting it"
+         class="btn btn-info" href="{% url 'quests:quest_detail' q.id %}" role="button">
+          <i class="fa fa-fw fa-info-circle"></i><span class="visible-lg-inline-block icon-text">View Details</span>
       </a>
     {% endif %}
 
-    {% if request.user.profile.is_TA %}
-      <a title="Create a new quest using this one as a template. By default this quest will be a prerequisite for the new one."
-         class="btn btn-default" role="button" href="{% url 'quests:quest_copy' q.id %}" >
-        <i class="fa fa-copy"></i>
-      </a>
-    {% endif %}
+    {% if  request.user.is_staff or request.user == q.editor %}
+        <a class="btn btn-warning" href="{% url 'quests:quest_update' q.id %}" role="button"
+          title = "Edit the quest" >
+          <i class="fa fa-edit"></i>
+        </a>
+        <a class="btn btn-primary" href="{% url 'quests:quest_copy' q.id %}" role="button"
+          title = "Create a copy of this quest" >
+          <i class="fa fa-copy"></i>
+        </a>
+        <a class="btn btn-default" href="{% url 'quests:approved_for_quest' q.id %}" role="button"
+          title = "View past submissions of this quest" >
+          <i class="fa fa-folder-open-o"></i>
+        </a>
+        <a class="btn btn-danger" href="{% url 'quests:quest_delete' q.id %}" role="button"
+          title = "Delete this quest" >
+          <i class="fa fa-trash-o"></i>
+        </a>
 
-  {% endif %}
+    {% else %}
+
+        <a title="Start Quest: view the quest and move it to your 'In Progress' tab, allowing you to complete it."
+           class="btn btn-primary" href="{% url 'quests:start' q.id %}" role="button">
+            <i class="fa fa-fw fa-play-circle"></i><span class="visible-lg-inline-block icon-text">Start Quest</span>
+        </a>
+
+        {% if request.user.profile.game_lab_transfer_process_on %}
+          <a title="Skip Quest: mark this quest as completed, but you won't get XP for it."
+             class="btn btn-warning" href="{% url 'quests:skip_for_quest' q.id %}" role="button">Skip Quest</a>
+        {% endif %}
+
+        {% if q|is_hidden:request.user %}
+          <a title="Unhide Quest: remove this from your list of hidden quests."
+             class="btn btn-success" role="button" href="{% url 'quests:unhide' q.id %}" >
+            <i class="fa fa-eye"></i>
+          </a>
+        {% elif q.hideable %}
+          <a title="Hide Quest: add this to your list of hidden quests."
+             class="btn btn-default" role="button" href="{% url 'quests:hide' q.id %}" >
+            <i class="fa fa-eye-slash"></i>
+          </a>
+        {% endif %}
+
+        {% if request.user.profile.is_TA %}
+          <a title="Create a new quest using this one as a template. By default this quest will be a prerequisite for the new one."
+             class="btn btn-default" role="button" href="{% url 'quests:quest_copy' q.id %}" >
+            <i class="fa fa-copy"></i>
+          </a>
+        {% endif %}
+
+    {% endif %}
 </div>
